; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_radeon_object.c_radeon_bo_list_add_object.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/radeon/extr_radeon_object.c_radeon_bo_list_add_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_bo_list = type { %struct.TYPE_2__, i64 }
%struct.TYPE_2__ = type { i32 }
%struct.list_head = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @radeon_bo_list_add_object(%struct.radeon_bo_list* %0, %struct.list_head* %1) #0 {
  %3 = alloca %struct.radeon_bo_list*, align 8
  %4 = alloca %struct.list_head*, align 8
  store %struct.radeon_bo_list* %0, %struct.radeon_bo_list** %3, align 8
  store %struct.list_head* %1, %struct.list_head** %4, align 8
  %5 = load %struct.radeon_bo_list*, %struct.radeon_bo_list** %3, align 8
  %6 = getelementptr inbounds %struct.radeon_bo_list, %struct.radeon_bo_list* %5, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %15

9:                                                ; preds = %2
  %10 = load %struct.radeon_bo_list*, %struct.radeon_bo_list** %3, align 8
  %11 = getelementptr inbounds %struct.radeon_bo_list, %struct.radeon_bo_list* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load %struct.list_head*, %struct.list_head** %4, align 8
  %14 = call i32 @list_add(i32* %12, %struct.list_head* %13)
  br label %21

15:                                               ; preds = %2
  %16 = load %struct.radeon_bo_list*, %struct.radeon_bo_list** %3, align 8
  %17 = getelementptr inbounds %struct.radeon_bo_list, %struct.radeon_bo_list* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load %struct.list_head*, %struct.list_head** %4, align 8
  %20 = call i32 @list_add_tail(i32* %18, %struct.list_head* %19)
  br label %21

21:                                               ; preds = %15, %9
  ret void
}

declare dso_local i32 @list_add(i32*, %struct.list_head*) #1

declare dso_local i32 @list_add_tail(i32*, %struct.list_head*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
